--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <div class="px-4 py-5  text-center ">
         <img class="d-block mx-auto mb-4 rounded-circle" src="./assets/profile pic.png" alt="Profile Picture for Zack." width="200px" height="200px">
-        <h1 class="display-5 fw-bold text-body-emphasis">Centered hero</h1>
+        <h1 class="display-5 fw-bold text-body-emphasis">Computer Wiz</h1>
         <div class="col-lg-6 mx-auto">
           <p class="lead mb-4">I am an IT professional and a software developer. I volunteer my web development skills with local museums. When I am not coding, I love 🏍️ing through the Mojave.</p>
         </div>
