--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
               <a href="https://tankland.com/" class="btn btn-primary">
                 Tank Land Website
               </a>
+              <a href="./flyers.html" class="btn btn-primary">
+                Flyers
+              </a>
             </div>
           </div>
           <div class="col d-flex align-items-start">
