added flyers and videos section

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <div class="icon-square text-body-emphasis  d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
               <img src="./assets/valhalla-odyssey-gameplay.gif" height="200px" width="200px"  class="rounded-circle"></img>
             </div>
+
             <div>
               <h3 class="fs-2 text-body-emphasis">Videogame Development</h3>
               <p>I started modding games like Warcraft 3 and Cortex Command when I was 12. I recently attained an A/S degree in Computer Science so I could develop cool games in engines like Unity.</p>
@@ -63,12 +64,27 @@
             <div class="icon-square text-body-emphasis d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
               <img src="./assets/code.png" height="200px" width="200px"  class="rounded-circle"></img>
             </div>
+
             <div>
               <h3 class="fs-2 text-body-emphasis">Web Development</h3>
               <p>I made my own websites to practice coding in HTML, CSS, and Javascript. Now I volunteer with my skills with American Military Museum (Tank Land) to develop WordPress websites and manage computer devices.</p>
               <a href="https://tankland.com/" class="btn btn-primary">
                 Tank Land Website
               </a>
+            </div>
+          </div>
+          <div class="col d-flex align-items-start">
+            <div class="icon-square text-body-emphasis  d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+              <img src="./assets/zack-tankland.jpg" height="200px" class="rounded-circle"></img>
+            </div>
+
+            <div>
+              <h3 class="fs-2 text-body-emphasis">Museum Content</h3>
+                <p>I combine my passion for history and all things IT by volunteering my time and skills at my favorite non-profit museum, Tank Land. I make eye-catching flyers, youtube videos, and other content to support museum educational and community goals.</p>
+              <a href="./flyers.html" class="btn btn-primary">
+                Flyers
+              </a>
+                <p>I combine my passion for history and all things IT by volunteering my time and skills at my favorite non-profit museum, Tank Land. I make eye-catching flyers, youtube videos, and other content to support museum educational and community goals.</p>
               <a href="./flyers.html" class="btn btn-primary">
                 Flyers
               </a>
@@ -78,9 +94,10 @@
             <div class="icon-square text-body-emphasis  d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
               <img src="./assets/dirtbike-profile-cropped.jpg" height="200px" class="rounded-circle"></img>
             </div>
+
             <div>
               <h3 class="fs-2 text-body-emphasis">Dirtbiking</h3>
-              <p>My favorite way of getting into the outdoors is dirtbiking across the desert. I started teaching friends to trail ride and explore the Mojave in 2022. My goal is to do multi-day dirtbike treks, exploring parts of California rarely visited..</p>
+              <p>My favorite way of getting into the outdoors is dirtbiking across the desert. I started teaching friends to trail ride and explore the Mojave in 2022. My goal is to do multi-day dirtbike treks, exploring parts of California rarely visited...</p>
             </div>
           </div>
         </div>
