--- a/index.html
+++ b/index.html
@@ -84,9 +84,8 @@
               <a href="./flyers.html" class="btn btn-primary">
                 Flyers
               </a>
-                <p>I combine my passion for history and all things IT by volunteering my time and skills at my favorite non-profit museum, Tank Land. I make eye-catching flyers, youtube videos, and other content to support museum educational and community goals.</p>
-              <a href="./flyers.html" class="btn btn-primary">
-                Flyers
+              <a href="./videos.html" class="btn btn-primary">
+                Videos
               </a>
             </div>
           </div>
