--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
               <a href="https://aquanact.itch.io/solidify" class="btn btn-primary">
                 Play Solidify
               </a>
+              </a>
+              <a href="https://aquanact.itch.io/nautilus" class="btn btn-primary">
+                Play Nautilus
+              </a>
             </div>
 
           
@@ -141,7 +145,7 @@
      </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+  </body>
 </html>
 
 <!-- This site is made and maintained by Zachary Cuervo. -->
